force-app/main/default/objects/Company__c/fields/HQ_Phone__c.field-meta.xml
<CustomField>
    <fullName>HQ_Phone__c</fullName>
    <label>HQ Phone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>