force-app/main/default/objects/Company__c/fields/No_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employees__c</fullName>
    <label>No Of Employee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>