force-app/main/default/objects/Company__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Zip/Postal Code</label>
    <length>140</length>
    <type>Text</type>
</CustomField>