force-app/main/default/objects/Company__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Annual_Revenue__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>HQ_Phone__c</columns>
    <columns>Industry__c</columns>
    <columns>No_of_Employees__c</columns>
    <columns>Phone__c</columns>
    <columns>State_Province__c</columns>
    <columns>Street__c</columns>
    <columns>Website__c</columns>
    <columns>Postal_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>