force-app/main/default/objects/Company__c/listViews/AllCompany.listView-meta.xml
<ListView>
    <fullName>AllCompany</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Company</label>
</ListView>